# 5g-ddos-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: DATASET_INSTRUCTIONS.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  train-job.yaml
scripts/: download_dataset.sh  train_model.py
src/: __init__.py  cli.py  config.py  server.py
src/agents/: __init__.py  anthropic_agent.py  base.py  factory.py  langchain_agent.py  openai_agent.py  registry.py
src/data/: loader.py  preprocessor.py
src/models/: classifier.py  llm_client.py
src/tools/: detect_anomaly.py  explain_attack.py  query_history.py  recommend_response.py
