[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5g-ddos-mcp"
version = "1.0.0"
description = "MCP server for 5G DDoS detection using the NCSRD-DS-5GDDoS dataset"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["5G", "DDoS", "MCP", "security", "AI", "PRIVATEER"]

dependencies = [
    "mcp[cli]>=1.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
ollama = ["ollama>=0.3.0"]
openai = ["openai>=1.30.0"]
balance = ["imbalanced-learn>=0.12.0"]
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]
langchain-anthropic = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
]
langchain-openai = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
]
langchain-ollama = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
]
all = [
    "anthropic>=0.40.0",
    "ollama>=0.3.0",
    "openai>=1.30.0",
    "imbalanced-learn>=0.12.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx[testing]>=0.27.0",
]

[project.scripts]
5g-ddos-mcp = "src.server:main"
5g-ddos = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
